--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
       <!-- Mount App -->
       <script>
-          const montedApp = app.mount('#app')
+          const mountedApp = app.mount('#app')
       </script>
   </body>
 </html>
