--- a/index.html
+++ b/index.html
@@ -9,10 +9,23 @@
     <script src="https://unpkg.com/vue@3.0.11/dist/vue.global.js"></script>
   </head>
   <body>
-      <div id="app">
-          <h1>{{ product }}</h1>
-          <p>{{ description }}</p>
+    <div id="app">
+      <div class="nav-bar"></div>
+      
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <!-- image goes here -->
+            <!-- <img v-bind:src="image"> -->
+            <img :src="image">
+            <a :href="googleUrl">Google</a>
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+          </div>
+        </div>
       </div>
+    </div>
 
       <!-- Import App -->
       <script src="./main.js"></script>
