--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
-            <!-- image goes here -->
-            <!-- <img v-bind:src="image"> -->
             <img :src="image">
-            <a :href="googleUrl">Google</a>
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
+            <p v-else>Out of Stock</p>
+            <p v-if="onSale">On Sale</p>
           </div>
         </div>
       </div>
