--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
+            <!-- <img v-bind:src="image"> -->
             <img :src="image">
           </div>
           <div class="product-info">
@@ -23,6 +24,13 @@
             <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
             <p v-else>Out of Stock</p>
             <p v-if="onSale">On Sale</p>
+            <ul>
+              <li v-for="detail in details">{{ detail }}</li>
+            </ul>
+            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
+            Sizes: <ul>
+              <li v-for="size in sizes">{{ size}}</li>
+            </ul>
           </div>
         </div>
       </div>
