--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="app">
       <div class="nav-bar"></div>
       
+      <div class="cart">Cart({{ cart }})</div>
+
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
@@ -27,10 +29,10 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id">{{ variant.color }}</div>
-            Sizes: <ul>
-              <li v-for="size in sizes">{{ size}}</li>
-            </ul>
+            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
+            <!-- v-on: shorthand @ -->
+            <button class="button" @click="addToCart">Add to Cart</button>
+            <button class="button" @click="removeFromCart">Remove from Cart</button>
           </div>
         </div>
       </div>
