--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="product-container">
           <div class="product-image">
             <!-- <img v-bind:src="image"> -->
-            <img :src="image">
+            <img :src="image" :class="{ 'out-of-stock-img': !inStock }">
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
@@ -29,9 +29,20 @@
             <ul>
               <li v-for="detail in details">{{ detail }}</li>
             </ul>
-            <div v-for="variant in variants" :key="variant.id" @mouseover="updateImage(variant.image)">{{ variant.color }}</div>
+            <div
+              v-for="variant in variants" 
+              :key="variant.id" 
+              @mouseover="updateImage(variant.image)"
+              class="color-circle"
+              :style="{ backgroundColor: variant.color }">
+            </div>
             <!-- v-on: shorthand @ -->
-            <button class="button" @click="addToCart">Add to Cart</button>
+            <button
+              class="button"
+              :class="{ disabledButton: !inStock }" 
+              @click="addToCart">
+              Add to Cart
+            </button>
             <button class="button" @click="removeFromCart">Remove from Cart</button>
           </div>
         </div>
