--- a/index.html
+++ b/index.html
@@ -14,43 +14,14 @@
       
       <div class="cart">Cart({{ cart }})</div>
 
-      <div class="product-display">
-        <div class="product-container">
-          <div class="product-image">
-            <!-- <img v-bind:src="image"> -->
-            <img :src="image" :class="{ 'out-of-stock-img': !inStock }">
-          </div>
-          <div class="product-info">
-            <h1>{{ title }}</h1>
-            <p v-if="inventory > 10">In Stock</p>
-            <p v-else-if="inventory <= 10 && inventory > 0">Almost sold out!</p>
-            <p v-else>Out of Stock</p>
-            <p v-if="onSale">On Sale</p>
-            <ul>
-              <li v-for="detail in details">{{ detail }}</li>
-            </ul>
-            <div
-              v-for="(variant, index) in variants" 
-              :key="variant.id" 
-              @mouseover="updateVariant(index)"
-              class="color-circle"
-              :style="{ backgroundColor: variant.color }">
-            </div>
-            <!-- v-on: shorthand @ -->
-            <button
-              class="button"
-              :class="{ disabledButton: !inStock }" 
-              @click="addToCart">
-              Add to Cart
-            </button>
-            <button class="button" @click="removeFromCart">Remove from Cart</button>
-          </div>
-        </div>
-      </div>
+      <product-display :premium="premium"></product-display>
     </div>
 
       <!-- Import App -->
       <script src="./main.js"></script>
+
+      <!-- Import Components -->
+      <script src="./components/ProductDisplay.js"></script>
 
       <!-- Mount App -->
       <script>
