L9 Component & Props end

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <div class="cart">Cart({{ cart }})</div>
 
       <product-display :premium="premium"></product-display>
+      <product-details :details="details"></product-details>
     </div>
 
       <!-- Import App -->
@@ -22,6 +23,7 @@
 
       <!-- Import Components -->
       <script src="./components/ProductDisplay.js"></script>
+      <script src="./components/ProductDetails.js"></script>
 
       <!-- Mount App -->
       <script>
