--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <div id="app">
       <div class="nav-bar"></div>
       
-      <div class="cart">Cart({{ cart }})</div>
+      <div class="cart">Cart({{ cart.length }})</div>
 
-      <product-display :premium="premium"></product-display>
+      <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
       <product-details :details="details"></product-details>
     </div>
 
