L10 Communicating events end

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       
       <div class="cart">Cart({{ cart.length }})</div>
 
-      <product-display :premium="premium" @add-to-cart="updateCart"></product-display>
+      <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeCart"></product-display>
       <product-details :details="details"></product-details>
     </div>
 
