L11 Form & V-model complete

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="cart">Cart({{ cart.length }})</div>
 
       <product-display :premium="premium" @add-to-cart="updateCart" @remove-from-cart="removeCart"></product-display>
-      <product-details :details="details"></product-details>
+      
     </div>
 
       <!-- Import App -->
@@ -24,6 +24,8 @@
       <!-- Import Components -->
       <script src="./components/ProductDisplay.js"></script>
       <script src="./components/ProductDetails.js"></script>
+      <script src="./components/ReviewForm.js"></script>
+      <script src="./components/ReviewList.js"></script>
 
       <!-- Mount App -->
       <script>
